Created NixOS specific config for atom.

--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,4 +1,5 @@
-pinentry-program /usr/bin/pinentry-curses
+#pinentry-program /run/current-system/sw/bin/pinentry-curses
+pinentry-program /run/current-system/sw/bin/pinentry-qt
 
  # Keyboard control
 no-grab
